--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,13 @@ dependencies:
   flex_color_scheme: ^7.3.1
   google_fonts: ^6.2.1
   equatable: ^2.0.3
+  dio: ^5.4.0
+  dio_cache_interceptor: ^3.3.1
+  ansicolor: 2.0.2
+  talker_flutter: ^4.1.3
+  talker_dio_logger: ^4.1.3
+  global_configuration: ^2.0.0
+  shared_preferences: ^2.0.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -67,6 +74,7 @@ flutter:
   assets:
     - assets/images/
     - assets/json/
+    - assets/cfg/
     - i18n/
 
   # An image asset can refer to one or more resolution-specific "variants", see
