--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,15 +41,12 @@ dependencies:
   equatable: ^2.0.3
   dio: ^5.4.0
   dio_cache_interceptor: ^3.3.1
-  ansicolor: 2.0.2
   talker_flutter: ^4.1.3
   talker_dio_logger: ^4.1.3
   global_configuration: ^2.0.0
   shared_preferences: ^2.0.7
   provider: ^6.0.5
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  cached_network_image: ^3.3.1
   cupertino_icons: ^1.0.6
 
 dev_dependencies:
